2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Fix for "database cache is
	already in use" warning (removing a hack that is no longer needed,
	this hack was put in place because before fixes that were done today
	was tracker-indexer removing cache.db after some time. The hack caused
	an unwanted warning, though)

2008-06-23  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-interface-sqlite.c: Improve error
	reporting here so we say if the query used is foobar OR if it is a
	geniune error.
	
	* src/libtracker-db/tracker-db-manager.c: Strip whitespace before
	trying to load queries from SQL files. Also, present a count when
	done so we know how many we loaded as a measure of testing it
	worked properly.

2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Also setting DB parameters
	in case of attach_all=true. Fixes load_sql_file for sqlite-services.sql
	for file-meta.db and email-meta.db (UTF8 collate function was not set)

2008-06-23  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.[ch]: 
	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-main.c: Make the force_reindex, remove
	cache and attach all settings into a flag we pass when
	initialising the database manager. 

2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Putting a warning in case of
	problems while loading a .sql file

2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/scripts/dummy_data_start.sh.in
	* tests/scripts/data/email-contents.sql
	* tests/scripts/data/file-meta.sql
	* tests/scripts/data/common.sql
	* tests/scripts/data/file-contents.sql
	* tests/scripts/data/email-meta.sql
	* tests/scripts/data/xesam.sql:

	Cleaned up the test data now that the databases are (more or less)
	initialized correctly

2008-06-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: