@@ -1,3 +1,8 @@
+2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* src/libtracker-db/tracker-db-manager.c: Normalizing attachments (for
+	example cache.db was attached twice, which gave warnings).
+
 2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* src/libtracker-db/tracker-db-manager.c: Fix for "database cache is
